// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler: v-if codegen basic v-if 1`] = `
"isTrue(ok)
  ? _cE("view", _uM({ key: 0 }))
  : _cC("v-if", true)"
`;

exports[`compiler: v-if codegen increasing key: v-if + v-else-if + v-else 1`] = `
"_cE(Fragment, null, [
  isTrue(ok)
    ? _cE("view", _uM({ key: 0 }))
    : _cE("p", _uM({ key: 1 })),
  isTrue(another)
    ? _cE("view", _uM({ key: 2 }))
    : isTrue(orNot)
      ? _cE("p", _uM({ key: 3 }))
      : _cE("p", _uM({ key: 4 }))
], 64 /* STABLE_FRAGMENT */)"
`;

exports[`compiler: v-if codegen multiple v-if that are sibling nodes should have different keys 1`] = `
"_cE(Fragment, null, [
  isTrue(ok)
    ? _cE("view", _uM({ key: 0 }))
    : _cC("v-if", true),
  isTrue(orNot)
    ? _cE("p", _uM({ key: 1 }))
    : _cC("v-if", true)
], 64 /* STABLE_FRAGMENT */)"
`;

exports[`compiler: v-if codegen template v-if 1`] = `
"isTrue(ok)
  ? _cE(Fragment, _uM({ key: 0 }), [
      _cE("view"),
      "hello",
      _cE("p")
    ], 64 /* STABLE_FRAGMENT */)
  : _cC("v-if", true)"
`;

exports[`compiler: v-if codegen v-if + v-else 1`] = `
"isTrue(ok)
  ? _cE("view", _uM({ key: 0 }))
  : _cE("p", _uM({ key: 1 }))"
`;

exports[`compiler: v-if codegen v-if + v-else-if + v-else 1`] = `
"isTrue(ok)
  ? _cE("view", _uM({ key: 0 }))
  : isTrue(orNot)
    ? _cE("p", _uM({ key: 1 }))
    : _cE(Fragment, _uM({ key: 2 }), ["fine"], 64 /* STABLE_FRAGMENT */)"
`;

exports[`compiler: v-if codegen v-if + v-else-if 1`] = `
"isTrue(ok)
  ? _cE("view", _uM({ key: 0 }))
  : isTrue(orNot)
    ? _cE("p", _uM({ key: 1 }))
    : _cC("v-if", true)"
`;

exports[`compiler: v-if codegen v-if on <slot/> 1`] = `
"isTrue(ok)
  ? renderSlot($slots, "default", _uM({ key: 0 }))
  : _cC("v-if", true)"
`;
